@@ -1,3 +1,6 @@
+[COLOR yellow][B]v1.6.0[/B][/COLOR]
+* Kodi 21 migration message typo.
+* Hide "Build designed for..." in build menu.
 [COLOR yellow][B]v1.5.9[/B][/COLOR]
 * APK auto update - TEMPORARY show kodi 21 migration message.
 [COLOR yellow][B]v1.5.8[/B][/COLOR]
